@@ -1,2 +1,0 @@
-Simulation of Gaussian and extreme value random fields; conditional
-simulation; kriging.
