@@ -1,14 +1,0 @@
-# $NetBSD: Makefile,v 1.2 2019/08/08 19:53:45 brook Exp $
-
-R_PKGNAME=	RandomFieldsUtils
-R_PKGVER=	0.5.3
-CATEGORIES=	math
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-COMMENT=	Utilities for the simulation and analysis of random fields
-LICENSE=	gnu-gpl-v3
-
-USE_LANGUAGES=	c c++ fortran
-
-.include "../../math/R/Makefile.extension"
-.include "../../mk/bsd.pkg.mk"
