@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.7666 2024/12/14 01:29:44 mef Exp $
+$NetBSD: CHANGES-2024,v 1.7667 2024/12/14 08:41:48 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -11491,3 +11491,5 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated net/R-pingr to 2.0.4 [mef 2024-12-14]
 	Updated lang/R-cpp11 to 0.5.1 [mef 2024-12-14]
 	Updated databases/R-RSQLite to 2.3.9 [mef 2024-12-14]
+	Removed math/R-RandomFields [wiz 2024-12-14]
+	Removed math/R-RandomFieldsUtils [wiz 2024-12-14]
